clean serializer, add start of ingestion
